refactoring swagger & done all work from back
